:iphone: fix settings display on mobile

--- a/inertia/assets/css/components/_settings.scss
+++ b/inertia/assets/css/components/_settings.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
-    width: 100%;
+    width: 90%;
     max-width: 500px;
     padding: 18px;
     background: var(--background);
@@ -28,10 +28,19 @@
 
   &__container {
     display: flex;
+
+    @media screen and (max-width: 767px) {
+      flex-direction: column;
+      gap: 18px;
+    }
   }
 
   &__left {
     margin: 0 36px 0 18px;
+
+    @media screen and (max-width: 767px) {
+      margin: 0;
+    }
   }
 
   &__right {
