--- a/inertia/assets/css/components/inputs/_profile-picture-input.scss
+++ b/inertia/assets/css/components/inputs/_profile-picture-input.scss
@@ -14,7 +14,7 @@
   }
 
   &__image {
-    width: 100px;
+    min-width: 100px;
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
